target_os = "android"
target_cpu = "arm"
android_channel = "stable"
blink_symbol_level = 0
chrome_pgo_phase = 2
dcheck_always_on = false
debuggable_apks = false
disable_android_lint = true
disable_fieldtrial_testing_config = true
enable_mdns = false
enable_nacl = false
enable_remoting = false
is_component_build = false
is_debug = false
is_official_build = true
is_java_debug = false
symbol_level = 0
v8_symbol_level = 0
